Bug 106830 - [bisected] 32 bit tests (deqp, piglit, glcts, vulkancts) crashing on all platforms
Summary: [bisected] 32 bit tests (deqp, piglit, glcts, vulkancts) crashing on all plat...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Jason Ekstrand
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-06-05 21:19 UTC by Clayton Craft
Modified: 2018-06-05 22:52 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Clayton Craft 2018-06-05 21:19:09 UTC
deqp, glcts, piglit, and vulkancts tests are all crashing when run with 32 bit Mesa.This seems to affect every platform except G33.


This has been bisected to this commit:

commit 6a9525bf6729a8d2bb9c6a7b10ebdc9925c55463 (refs/bisect/bad)
Author: Jason Ekstrand <jason.ekstrand@intel.com>
Date:   Tue May 29 14:37:35 2018 -0700

    intel/eu: Switch to a logical state stack

    Instead of the state stack that's based on copying a dummy instruction
    around, we start using a logical stack of brw_insn_states.  This uses a
    bit less memory and is way less conceptually bogus.

    Reviewed-by: Kenneth Graunke <kenneth@whitecape.org>
Comment 1 Jason Ekstrand 2018-06-05 22:52:46 UTC
This should be fixed by the following commit:

commit 01ad2067bba17451c663983877ec85145de20f02
Author: Jason Ekstrand <jason.ekstrand@intel.com>
Date:   Tue Jun 5 14:33:12 2018 -0700

    intel/eu: Use a struct copy instead of a memcpy
    
    The memcpy had the wrong size and this was causing crashes on 32-bit
    builds of the driver.
    
    Fixes: 6a9525bf6729a8 "intel/eu: Switch to a logical state stack"
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=106830
    Reviewed-by: Kenneth Graunke <kenneth@whitecape.org>

I've verified that it fixes the one obvious 32-bit thing but haven't had a chance to do a full CI run just yet.  Please confirm once the daily run for tonight is complete.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.